Yes.. I know I said I will make more comments but I have not time now.. all is in the notebook!

--- a/task_Hanoi_Towers/towers_of_hanoi_david_silva.ipynb
+++ b/task_Hanoi_Towers/towers_of_hanoi_david_silva.ipynb
@@ -5,8 +5,7 @@
    "metadata": {},
    "source": [
     "## Task: The towers of Hanoi\n",
-    "# by: David Silva Troya\n",
-    "This code is also on [github](https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet)\n"
+    "# by: David Silva Troya\n"
    ]
   },
   {
