Updating the notebook

--- a/task_Hanoi_Towers/towers_of_hanoi_david_silva.ipynb
+++ b/task_Hanoi_Towers/towers_of_hanoi_david_silva.ipynb
@@ -4,20 +4,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Artificial Intelligence, Thomas More Geel 2022-2023\n",
     "## Task: The towers of Hanoi\n",
-    "# by: David Silva Troya\n"
+    "#### by David Silva Troya\n",
+    "This code is also on [my github](https://github.com/DavidSilTroy/python_tkinter_first_try/tree/main/task_Hanoi_Towers)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The first part is import all the necesaries libraries:"
+    "This is how the User Interface can looks like (because colors are random):\n",
+    "\n",
+    "<p style=\"text-align: center;\"> \n",
+    "    <img src=\"./assets/tkinter_hanoi_tower_dast.png\"  style=\"width: 50%; text-align: center;\"/>\n",
+    "</p>\n",
+    "\n",
+    "This is part of the process to solve the towers:\n",
+    "\n",
+    "<p style=\"text-align: center;\"> \n",
+    "    <img src=\"./assets/tkinter_hanoi_tower_process_dast.png\"  style=\"width: 50%; text-align: center;\"/>\n",
+    "</p>\n",
+    "\n",
+    "This is the end result:\n",
+    "\n",
+    "<p style=\"text-align: center;\"> \n",
+    "    <img src=\"./assets/tkinter_hanoi_tower_solved_dast.png\"  style=\"width: 50%; text-align: center;\"/>\n",
+    "</p>\n",
+    "\n",
+    "More fun:\n",
+    "\n",
+    "<p style=\"text-align: center;\"> \n",
+    "    <img src=\"./assets/tkinter_hanoi_tower_more_dast.png\"  style=\"width: 50%; text-align: center;\"/>\n",
+    "</p>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now the code. The first step is import all the necesaries libraries:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,13 +364,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "if __name__ == \"__main__\":\n",
     "    \n",
-    "    number_of_disks=4 #This can be always changed if you want more! or less..\n",
+    "    number_of_disks=5 #This can be always changed if you want more! or less..\n",
     "    hanoi_window = tkinter.Tk() #Creating the window for the User Interface\n",
     "    hanoi_window.title('Hanoi Towers by David Silva') #Creating a nice title\n",
     "    #some greetings here..\n",
@@ -363,11 +395,63 @@
     "    #thank you for your time! :)\n",
     "    hanoi_window.mainloop()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some websites that helps me to make this program:\n",
+    "\n",
+    "-https://nbconvert.readthedocs.io/en/latest/install.html\n",
+    "\n",
+    "-https://www.geeksforgeeks.org/python-grid-method-in-tkinter/\n",
+    "\n",
+    "\n",
+    "-https://stackoverflow.com/questions/32171005/how-to-get-an-integer-from-a-tkinter-entry-box\n",
+    "\n",
+    "-https://pythonprinciples.com/blog/python-convert-string-to-int/#:~:text=To%20convert%20a%20string%20to%20an%20integer%2C%20use%20the%20built,an%20integer%20as%20its%20output.\n",
+    "\n",
+    "-https://stackoverflow.com/questions/49007295/how-to-align-label-entry-in-tkinter\n",
+    "\n",
+    "-https://pythonguides.com/get-all-values-from-a-dictionary-python/#:~:text=In%20Python%20to%20get%20all,that%20contains%20all%20the%20values.\n",
+    "\n",
+    "-https://realpython.com/iterate-through-dictionary-python/\n",
+    "\n",
+    "-https://www.tutorialspoint.com/deleting-a-label-in-python-tkinter#:~:text=If%20we%20want%20to%20delete,use%20the%20destroy()%20method.\n",
+    "\n",
+    "-https://github.com/rdbende/Sun-Valley-ttk-theme/wiki/Usage-with-Python\n",
+    "\n",
+    "-https://stackoverflow.com/questions/32582751/tkinter-center-label-in-frame-of-fixed-size\n",
+    "\n",
+    "\n",
+    "-https://pythonbasics.org/tkinter-frame/\n",
+    "\n",
+    "-https://www.tutorialspoint.com/python/tk_frame.htm\n",
+    "\n",
+    "-https://stackoverflow.com/questions/55667841/how-do-i-get-the-current-width-of-a-label-in-tkinter\n",
+    "\n",
+    "-https://www.geeksforgeeks.org/how-to-change-the-tkinter-label-font-size/\n",
+    "\n",
+    "-https://thomas-cokelaer.info/tutorials/python/dicts.html\n",
+    "\n",
+    "-https://stackoverflow.com/questions/66299120/how-to-get-the-x-and-y-coordinates-of-a-label-in-tkinter\n",
+    "\n",
+    "-https://stackoverflow.com/questions/6112482/how-to-get-the-tkinter-label-text\n",
+    "\n",
+    "-https://stackoverflow.com/questions/66462080/moving-a-label-in-tkinter\n",
+    "\n",
+    "-https://python-forum.io/thread-34119.html\n",
+    "\n",
+    "-https://www.youtube.com/watch?v=nl0mePCxoGU\n",
+    "\n",
+    "-https://www.tutorialspoint.com/python/tk_place.htm\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.7 64-bit",
+   "display_name": "Python 3.10.7 ('AI_env': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -386,7 +470,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "a7dbb88c84ecda04e2dfa8176cb6708abf8c95c32934f510df16d1a1f4945387"
+    "hash": "086f965382631898ecd2a1e2390ddaa16ae00d3d2e8a51818c5271cb5aafce24"
    }
   }
  },
